--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ set(source_ext .c)
 
 # Targets
 set(exec_target run)
+set(off_target off)
 
 # ! В БУДУЩЕМ УКАЗАТЬ КОНКРЕТНЫЕ СПИСКИ ! 
 file(GLOB_RECURSE sources ${source_dir}/*${source_ext})
@@ -17,9 +18,11 @@ file(GLOB_RECURSE headers ${source_dir}/*${header_ext})
 
 # Create executable
 add_executable(${exec_target} main${source_ext} ${sources})
+add_executable(${off_target} off${source_ext} ${sources})
 
 # Set headers
 foreach(_header ${headers})
     get_filename_component(_include_dir ${_header} DIRECTORY)
     target_include_directories(${exec_target} PRIVATE ${_include_dir})
+    target_include_directories(${off_target} PRIVATE ${_include_dir})
 endforeach()
