added shared library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,8 @@ file(GLOB_RECURSE headers ${source_dir}/*${header_ext})
 # Create executable
 add_executable(${exec_target} main${source_ext} ${sources})
 add_executable(${off_target} off${source_ext} ${sources})
+add_library(DistSensor SHARED ${sources})
+
 
 target_link_libraries(${exec_target} m)
 target_link_libraries(${off_target} m)
