--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,8 +22,8 @@ add_executable(${off_target} off${source_ext} ${sources})
 add_library(DistSensor SHARED ${sources})
 
 
-target_link_libraries(${exec_target} m)
-target_link_libraries(${off_target} m)
+target_link_libraries(${exec_target} m wiringPi)
+target_link_libraries(${off_target} m wiringPi)
 
 # Set headers
 foreach(_header ${headers})
